# tensorflowcpp

./: .gitattributes  CMakeLists.txt  README.md  libtensorflow_cc.so.2.10.0  libtensorflow_cc.so.2.10.0-2.params  libtensorflow_framework.so.2.10.0  libtensorflow_framework.so.2.10.0-2.params  main.cpp
